<resources>
    <string name="app_name">CoffeeTime</string>
    <string name="coffee">Coffee</string>
    <string name="comment">Comment</string>
    <string name="company">Company</string>
    <string name="company_code">Company Code</string>
    <string name="currency">kr</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="product">Product</string>
    <string name="submit">Submit</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_order">Order</string>
    <string name="option">Option</string>
    <string name="price">Price</string>
    <string name="person">Person</string>
</resources>